src/main/java/com/bredex/test/web/errors/ICustomException.java
package com.bredex.test.web.errors;

public interface ICustomException {

    CustomExceptionModel of(String message);
}
